--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <script language="javascript" type="text/javascript">
-  window.location.href='www.mcheika.co'
+  window.location.href='https://mcheika.co'
 </script>
